--- a/blog/content/algorithm-crane-game-kakao.mdx
+++ b/blog/content/algorithm-crane-game-kakao.mdx
@@ -1,5 +1,6 @@
 ---
-title: '크레인 인형뽑기 [2019 카카오 개발자 겨울 인턴십]'
+title: '크레인 인형뽑기'
+description: 2019 카카오 개발자 겨울 인턴십
 date: '2022-10-13'
 tags: ['Algorithm']
 featured: false
