docs: html 파일을 mdx로 변환중

--- a/blog/content/algorithm-iron-rod-cutting.mdx
+++ b/blog/content/algorithm-iron-rod-cutting.mdx
@@ -20,7 +20,8 @@ import { Tab, Tabs } from 'fumadocs-ui/components/tabs';
 - 각 쇠막대기를 자르는 레이저는 적어도 하나 존재한다.
 - 레이저는 어떤 쇠막대기의 양 끝점과도 겹치지 않는다.
 
-아래 그림은 위 조건을 만족하는 예를 보여준다. 수평으로 그려진 굵은 실선은 쇠막대기이고, 점은 레이저의 위치, 수직으로 그려진 점선 화살표는 레이저의 발사 방향이다.
+아래 그림은 위 조건을 만족하는 예를 보여준다.
+수평으로 그려진 굵은 실선은 쇠막대기이고, 점은 레이저의 위치, 수직으로 그려진 점선 화살표는 레이저의 발사 방향이다.
 
 ![쇠막대기와 레이저 배치](/images/content/algorithm-iron-rod-cutting.png)
 
