--- a/blog/content/hello-world.mdx
+++ b/blog/content/hello-world.mdx
@@ -2,7 +2,7 @@
 title: 'Hello, World!'
 description: '개발 블로그의 첫 시작!'
 date: '2022-10-07'
-tags: ['Life']
+tags: ['Develop']
 featured: false
 thumbnail: '/thumbnails/hello-world.png'
 ---
