--- a/blog/content/frontend-mvc-pattern.mdx
+++ b/blog/content/frontend-mvc-pattern.mdx
@@ -4,7 +4,7 @@ description: 사용자 인터페이스, 데이터 및 논리 제어를 구현하
 date: 2022-11-02
 tags: ['JavaScript']
 featured: false
-thumbnail: '/thumbnails/javascript.jpg'
+thumbnail: '/thumbnails/javascript.png'
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
