--- a/blog/content/javascript-control-flow.mdx
+++ b/blog/content/javascript-control-flow.mdx
@@ -4,7 +4,7 @@ description: '자바스크립트 제어문의 이해 - 조건문, 반복문, bre
 date: '2023-02-22'
 tags: ['JavaScript']
 featured: false
-thumbnail: '/thumbnails/javascript.jpg'
+thumbnail: '/thumbnails/javascript.png'
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
