--- a/blog/content/javascript-primitive-vs-reference.mdx
+++ b/blog/content/javascript-primitive-vs-reference.mdx
@@ -4,7 +4,7 @@ description: '자바스크립트의 원시 타입과 참조 타입의 차이점 
 date: '2023-03-02'
 tags: ['JavaScript']
 featured: false
-thumbnail: '/thumbnails/javascript.jpg'
+thumbnail: '/thumbnails/javascript.png'
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
