feat: Complete HTML to MDX conversion and update blog content
- Removed the conversion report as it is no longer needed.
- Updated README.md to reflect the new blog structure and components.
- Added new MDX files for algorithm problems and a study topic on computer components.
- Updated existing MDX files to change thumbnail paths from PNG to JPG format.
- Modified the conversion script to use JPG thumbnails instead of PNG.
- Added new images for the operating system components.
- Deleted the old default thumbnail PNG file and replaced it with a JPG version.

--- a/blog/content/box-packing-algorithm.mdx
+++ b/blog/content/box-packing-algorithm.mdx
@@ -2,7 +2,7 @@
 title: '박스 포장'
 date: 2023-05-10
 tags: ['Algorithm']
-thumbnail: /thumbnails/detail.png
+thumbnail: /thumbnails/box-packing-algorithm.jpg
 ---
 
 Queue 문제는 제대로 풀지 못해서 실패한 코드와 왜 실패했는지, 레퍼런스 코드는 어떤 방식으로 풀었는지 정리했습니다.🚀
