--- a/blog/content/http-vs-https-difference.mdx
+++ b/blog/content/http-vs-https-difference.mdx
@@ -3,7 +3,7 @@ title: 'HTTP와 HTTPS 차이점이 무엇인가요?'
 description: 'HTTP와 HTTPS 차이점이 무엇인가요?'
 date: 2023-04-19
 tags: ['Develop']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 _🤷🏻‍♀️: “HTTP와 HTTPS의 차이점에 대해서 말씀해주시겠어요?”_
