--- a/blog/content/library-vs-framework-difference.mdx
+++ b/blog/content/library-vs-framework-difference.mdx
@@ -3,7 +3,7 @@ title: '라이브러리와 프레임워크의 차이는 무엇인가요?'
 description: '라이브러리와 프레임워크의 차이는 무엇인가요?'
 date: 2023-05-25
 tags: ['Develop']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
