--- a/blog/content/login-session-with-cookies.mdx
+++ b/blog/content/login-session-with-cookies.mdx
@@ -2,7 +2,7 @@
 title: '로그인 상태 유지하는 애플리케이션 구현하기(with Cookie🍪)'
 date: 2023-05-02
 tags: ['Develop']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 쿠키에 대해서 배웠으니, 쿠키를 이용해서 로그인 기능을 구현해보려고 합니다.
