--- a/blog/content/parcel-static-files-setup.mdx
+++ b/blog/content/parcel-static-files-setup.mdx
@@ -2,7 +2,7 @@
 title: 'Parcel 환경에서 static 파일 연결하는 방법 🐻'
 date: 2023-05-09
 tags: ['Develop']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 📝 images 폴더에있는 이미지를 src 속성에 넣으면 보여줘야하는거 아닌가?
