--- a/blog/content/shopping-app-with-react-hooks-part1.mdx
+++ b/blog/content/shopping-app-with-react-hooks-part1.mdx
@@ -3,7 +3,7 @@ title: 'React Hooks를 이용한 쇼핑몰 애플리케이션 만들기1️⃣'
 description: '[코드스테이츠 - 상태관리] 🛒'
 date: 2023-04-22
 tags: ['Retrospective']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 이번 주 코드스테이츠에서는 React Hooks로 상태를 관리하고 React Router를 사용하여 라우팅 처리를 해서 쇼핑몰 애플리케이션을 만들어보았습니다.
