--- a/blog/content/shopping-app-with-react-hooks-part2.mdx
+++ b/blog/content/shopping-app-with-react-hooks-part2.mdx
@@ -1,8 +1,9 @@
 ---
-title: 'React Hooks를 이용한 쇼핑몰 애플리케이션 만들기2️⃣ [코드스테이츠 - 상태관리] 🛒'
+title: 'React Hooks를 이용한 쇼핑몰 애플리케이션 만들기2️⃣'
+description: '[코드스테이츠 - 상태관리] 🛒'
 date: 2023-04-24
 tags: ['Retrospective']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 이번엔 장바구니 페이지를 만들어봅시다 :)
