--- a/blog/content/shopping-app-with-redux-troubleshooting.mdx
+++ b/blog/content/shopping-app-with-redux-troubleshooting.mdx
@@ -2,7 +2,7 @@
 title: 'Redux를 이용한 쇼핑몰 애플리케이션 만들기 - 트러블슈팅🔫'
 date: 2023-04-26
 tags: ['Retrospective']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
