--- a/blog/content/understanding-cookies.mdx
+++ b/blog/content/understanding-cookies.mdx
@@ -3,7 +3,7 @@ title: '내가 몰라서 정리한 Cookie'
 description: '내가 몰라서 정리한 Cookie'
 date: 2023-05-02
 tags: ['Develop']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
