--- a/blog/content/url-vs-uri.mdx
+++ b/blog/content/url-vs-uri.mdx
@@ -2,7 +2,7 @@
 title: 'URL vs URI'
 date: 2023-03-30
 tags: ['Develop']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 ![스크린샷 4.png](/images/content/url-vs-uri/1.png)
