--- a/blog/content/what-is-cicd.mdx
+++ b/blog/content/what-is-cicd.mdx
@@ -2,7 +2,7 @@
 title: 'CI/CD, 그게 뭔데요? 🙋🏻'
 date: 2023-06-05
 tags: ['Develop']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 # CI와 CD
