--- a/blog/content/zsh-command-not-found-code.mdx
+++ b/blog/content/zsh-command-not-found-code.mdx
@@ -2,7 +2,7 @@
 title: 'zsh: command not found: code'
 date: 2023-04-25
 tags: ['Error']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 # 💡 zsh: command not found: code
