--- a/blog/content/testing-with-fireevent.mdx
+++ b/blog/content/testing-with-fireevent.mdx
@@ -2,7 +2,7 @@
 title: '테스트 코드 작성 연습하기 🐻 (fireEvent)'
 date: 2023-06-07
 tags: ['Develop']
-thumbnail: /thumbnails/default.png
+thumbnail: /thumbnails/default.jpg
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
