docs: 멘토링 짝 찾기 알고리즘 문제

--- a/blog/content/algorithm-sum-of-digits.mdx
+++ b/blog/content/algorithm-sum-of-digits.mdx
@@ -1,6 +1,6 @@
 ---
 title: '자릿수의 합'
-description: '블루투포스 방식으로 접근하는 알고리즘 풀이'
+description: 'Brute Force 방식으로 접근하는 알고리즘 풀이'
 date: '2025-11-17'
 tags: ['Algorithm']
 featured: false
